Project

General

Profile

Actions

Bug #57306

open

rgw: cloud sync crash

Added by Yehuda Sadeh over 1 year ago. Updated over 1 year ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
cloudsync backport_processed
Backport:
pacific quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

 ceph version 17.0.0-12890-g9b954f2c1a6 (9b954f2c1a66039a812646e9bc3377ee60e6e4ae) quincy (dev)
 1: /lib64/libpthread.so.0(+0x13a20) [0x7f80dbce4a20]
 2: gsignal()
 3: abort()
 4: /lib64/libstdc++.so.6(+0xa1a26) [0x7f80dbef4a26]
 5: /lib64/libstdc++.so.6(+0xad24c) [0x7f80dbf0024c]
 6: /lib64/libstdc++.so.6(+0xad2b7) [0x7f80dbf002b7]
 7: /lib64/libstdc++.so.6(+0xad519) [0x7f80dbf00519]
 8: (std::__throw_logic_error(char const*)+0x41) [0x7f80dbef72eb]
 9: (void std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_construct<char*>(char*, char*, std::forward_iterator_tag)+0x60) [0x55c92542d53a]
 10: (RGWRESTStreamS3PutObj::send_init(rgw::sal::Object*)+0x2a4) [0x7f80ddf3040c]
 11: (RGWRESTConn::put_obj_send_init(rgw::sal::Object*, rgw_http_param_pair const*, RGWRESTStreamS3PutObj**)+0x1b0) [0x7f80ddf37ef4]
 12: (RGWAWSStreamPutCRF::init()+0x114) [0x7f80ddd222b6]
 13: (RGWStreamSpliceCR::operate(DoutPrefixProvider const*)+0x62f) [0x7f80dde19d79]
 14: (RGWCoroutine::operate_wrapper(DoutPrefixProvider const*)+0xa) [0x7f80dd9a3dfa]
 15: (RGWCoroutinesStack::operate(DoutPrefixProvider const*, RGWCoroutinesEnv*)+0x255) [0x7f80dddffdb7]
 16: (RGWCoroutinesManager::run(DoutPrefixProvider const*, std::__cxx11::list<RGWCoroutinesStack*, std::allocator<RGWCoroutinesStack*> >&)+0x252) [0x7f80dde017d2]
 17: (RGWCoroutinesManager::run(DoutPrefixProvider const*, RGWCoroutine*)+0xa8) [0x7f80dde03116]
 18: (RGWRemoteDataLog::run_sync(DoutPrefixProvider const*, int)+0x1e4) [0x7f80ddc84662]
 19: (RGWDataSyncProcessorThread::process(DoutPrefixProvider const*)+0x46) [0x7f80ddef5644]
 20: (RGWRadosThread::Worker::entry()+0x3e5) [0x7f80dded701d]
 21: (Thread::entry_wrapper()+0x3f) [0x7f80dc814a53]
 22: (Thread::_entry_func(void*)+0x9) [0x7f80dc814a6b]
 23: /lib64/libpthread.so.0(+0x92a5) [0x7f80dbcda2a5]
 24: clone()

Issue is due to passing objects on the stack in RGWAWSHandleRemoteObjCBCR::operate() to called cr, and then referencing them (after yield).


Related issues 6 (1 open5 closed)

Related to rgw - Bug #57307: rgw: cloud sync: target objects are not created correctlyResolvedYehuda Sadeh

Actions
Has duplicate rgw - Bug #57807: The cloud sync module does not work starting with PacificDuplicate

Actions
Has duplicate rgw - Bug #55310: [pacific] RadosGW instance of Cloud Sync zone crashes when objects are uploadedDuplicate

Actions
Has duplicate rgw - Bug #62597: Cloud sync module not working and document not correctDuplicate

Actions
Copied to rgw - Backport #57406: pacific: rgw: cloud sync crashRejectedYehuda SadehActions
Copied to rgw - Backport #57407: quincy: rgw: cloud sync crashNewYehuda SadehActions
Actions #1

Updated by Casey Bodley over 1 year ago

  • Status changed from New to Fix Under Review
  • Assignee set to Yehuda Sadeh
  • Tags set to cloudsync
  • Backport set to pacific quincy
  • Pull request ID set to 47819
Actions #2

Updated by Casey Bodley over 1 year ago

  • Related to Bug #57307: rgw: cloud sync: target objects are not created correctly added
Actions #3

Updated by Casey Bodley over 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot over 1 year ago

Actions #5

Updated by Backport Bot over 1 year ago

Actions #6

Updated by Backport Bot over 1 year ago

  • Tags changed from cloudsync to cloudsync backport_processed
Actions #7

Updated by Casey Bodley over 1 year ago

  • Has duplicate Bug #57807: The cloud sync module does not work starting with Pacific added
Actions #8

Updated by Casey Bodley over 1 year ago

  • Has duplicate Bug #55310: [pacific] RadosGW instance of Cloud Sync zone crashes when objects are uploaded added
Actions #9

Updated by Casey Bodley 8 months ago

  • Has duplicate Bug #62597: Cloud sync module not working and document not correct added
Actions

Also available in: Atom PDF