rgw: cloud sync: fix crash due to objs on cr stack

Fixes: https://tracker.ceph.com/issues/57306

When passing objects that are declared on the stack (as ref / ptr), called
cr can't access them (other than for initialization), as the yield destroys
them. We now keep these objects as class members.

Signed-off-by: Yehuda Sadeh <yehuda@redhat.com>